--- a/.github/workflows/update-proxies.yml
+++ b/.github/workflows/update-proxies.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -53,4 +55,4 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add *.txt
           git commit -m "chore: Update proxy lists" || echo "No changes to commit"
-          git push
+          git push https://x:${{ secrets.GITHUB_TOKEN }}@github.com/hexmostafa/free-proxies.git
