--- a/.github/workflows/update-proxies.yml
+++ b/.github/workflows/update-proxies.yml
@@ -2,12 +2,13 @@ name: Update Proxies
 
 on:
   schedule:
-    # Runs every 2 minutes
-    - cron: '*/2 * * * *'
+    # Runs every 5 minutes (adjusted for stability)
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
 permissions:
   contents: write
+  actions: write
 
 jobs:
   update-proxies:
@@ -16,6 +17,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0 # Fetch all history for proper git operations
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -34,23 +38,27 @@ jobs:
           PROXY_TYPES="http https socks4 socks5"
           API_URL="https://hex.qwezt.com:7000/api/v1/proxies/scrape"
           
-          for type in $PROXY_TYPES
-          do
+          for type in $PROXY_TYPES; do
             echo "Fetching $type proxies..."
-            response=$(curl -s "$API_URL?proxy_type=$type&count=5000&apikey=$API_KEY")
-            
-            if [ "$(echo "$response" | jq -e '.proxies | length')" -gt 0 ]; then
+            response=$(curl -s -f "$API_URL?proxy_type=$type&count=5000&apikey=$API_KEY")
+            if [ $? -eq 0 ] && [ "$(echo "$response" | jq -e '.proxies | length')" -gt 0 ]; then
               echo "$response" | jq -r '.proxies[] | "\(.ip):\(.port)"' > "${type}_proxies.txt"
               echo "Updated ${type}_proxies.txt"
             else
-              echo "No $type proxies returned. Skipping file update."
+              echo "Error fetching $type proxies or no proxies returned. Skipping file update."
             fi
           done
 
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add *.txt
-          git commit -m "chore: Update proxy lists" || echo "No changes to commit"
-          git push
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: Update proxy lists"
+            git push https://x:${GITHUB_TOKEN}@github.com/hexmostafa/free-proxies.git
+          fi
