--- a/.github/workflows/update-proxies.yml
+++ b/.github/workflows/update-proxies.yml
@@ -2,13 +2,11 @@ name: Update Proxies
 
 on:
   schedule:
-    # Runs every 5 minutes (adjusted for stability)
-    - cron: '*/5 * * * *'
+    - cron: '*/2 * * * *'
   workflow_dispatch:
 
 permissions:
   contents: write
-  actions: write
 
 jobs:
   update-proxies:
@@ -17,9 +15,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0 # Fetch all history for proper git operations
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -38,27 +33,26 @@ jobs:
           PROXY_TYPES="http https socks4 socks5"
           API_URL="https://hex.qwezt.com:7000/api/v1/proxies/scrape"
           
-          for type in $PROXY_TYPES; do
-            echo "Fetching $type proxies..."
-            response=$(curl -s -f "$API_URL?proxy_type=$type&count=5000&apikey=$API_KEY")
-            if [ $? -eq 0 ] && [ "$(echo "$response" | jq -e '.proxies | length')" -gt 0 ]; then
+          for type in $PROXY_TYPES
+          do
+            echo "--- Debugging API response for $type ---"
+            response=$(curl -s "$API_URL?proxy_type=$type&count=5000&apikey=$API_KEY")
+            echo "$response"
+            
+            # Use || true to prevent the script from exiting on jq error
+            if [ "$(echo "$response" | jq -e '.proxies | length' || true)" -gt 0 ]; then
               echo "$response" | jq -r '.proxies[] | "\(.ip):\(.port)"' > "${type}_proxies.txt"
               echo "Updated ${type}_proxies.txt"
             else
-              echo "Error fetching $type proxies or no proxies returned. Skipping file update."
+              echo "No valid $type proxies found or API response was invalid. Skipping file update."
             fi
+            echo "-----------------------------------------"
           done
 
       - name: Commit and push changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add *.txt
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "chore: Update proxy lists"
-            git push https://x:${GITHUB_TOKEN}@github.com/hexmostafa/free-proxies.git
-          fi
+          git commit -m "chore: Update proxy lists" || echo "No changes to commit"
+          git push
